--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "commander": "^9.4.0",
     "esm": "^3.2.25",
+    "export-from-json": "^1.7.0",
     "express": "^4.18.1",
     "module": "^1.0.0"
   },
