--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "commander": "^9.4.0",
+    "darkmode-js": "^1.5.7",
     "esm": "^3.2.25",
     "export-from-json": "^1.7.0",
     "express": "^4.18.1",
