--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "commander": "^9.4.0",
     "darkmode-js": "^1.5.7",
@@ -12,20 +13,26 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "format": "npx prettier --write .",
     "esLint": "npx eslint ."
   },
-  "type": "module",
   "author": "Anshul Gandhi",
   "license": "ISC",
   "keywords": [],
   "escription": "",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@types/jest": "^29.2.2",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.26.0",
     "husky": "^8.0.1",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "husky": {
     "hooks": {
